K3S/monitoring/Grafana/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
  labels:
    argocd.argoproj.io/instance: blank
